# cardtemplater

./: Cargo.toml
src/: main.rs
test_data/: pie.txt  t1.tp
