[package]
name = "cardtemplater"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card_format = {path="../card_format/"}
clap_conf = {path="../../mlibs/clap_conf/"}

#handlebars = "3.0.1"
failure = "0.1.7"
failure_derive = "0.1.7"
#mksvg = {path="../../mlibs/mksvg/"}
#serde = "1.0.106"
#serde_derive = "1.0.106"
gtmpl = "0.5.7"
gtmpl_value = "0.3.3"
gtmpl_derive = "0.3.3"
gtmpl_helpers = {path="../../mlibs/gtmpl_helpers/"}
